--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,27 @@
+/*----------googlefonts------------ */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap');
+/*------------------body----------------- */
 body{
     font-family: 'Poppins', sans-serif;
 }
+/*-------------------------container--------------------*/
 .container{
     padding: 30px;
 }
+/* ------------------header------------------*/
 .header-icon{
     margin-left: 108px;
     margin-top: 57px;
     font-size: 24px;
     line-height: 36px;
 }
+/*-------------------main----------------------- */
 main{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+/*----------------journey-sectionn-start-------------------------- */
 .influencer-journey{
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -69,9 +75,15 @@ main{
     text-decoration: none;
 }
 .journey-image{
-    width: 440px;
-    min-height: 414px;
+    width: 475px;
+    height: 475px;
 }
+.journey-image img{
+    width: 440px;
+    height: 414px;
+}
+/*-----------------journey-end--------------------- */
+/*----------------gallary-start------------------------------------ */
 .collection-box{
     display: grid;
     grid-template-columns: 1fr;
@@ -135,6 +147,8 @@ main{
     top: -60px;
     color:#E02C6D;
 }
+/*----------------------gallary-end--------------------------------- */
+/*----------------------contact-start-------------------- */
 
 .contact-form{
     background-image: url(../images/contact.jpg);
@@ -195,6 +209,8 @@ input{
     color: white;
 
 }
+/*------------------contact-end------------------------------------- */
+/*---------------------footer-------------------------- */
 footer{
     background-color: #0A0826;
     color: #fff;
@@ -205,8 +221,10 @@ footer{
     line-height: 22px;
 }
 
+/*-------------------resposnive-media-queries----------------------------------------
+------------------------------------------------------------------- */
 
-/* mobile devices */
+/*------------------------mobile devices--------------*/
 @media only screen and (max-width:688px){
     .container{
         width: 100%;
@@ -258,7 +276,7 @@ footer{
      
      
 }
-/* tablet devices */
+/*----------------------------tablet devices--------------------- */
 @media only screen and (min-width:688px) and (max-width:992px) {
     .container{
         width: 100%;
@@ -289,6 +307,7 @@ footer{
    } 
     
 }
+/* --------------------------desktop-------------------------------------- */
 @media only screen and (min-width:992px) and (max-width:1312px){
     .container{
         width: 100%;
